# wise-agent-toolkit

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_mcp_connection.py
.github/: copilot-instructions.md  versioning.instructions.md
examples/: .env.template  README.md  main.py
tests/: test_configuration.py  test_functions.py
wise_agent_toolkit/: __init__.py  api.py  configuration.py  functions.py  prompts.py  schema.py  tools.py
wise_agent_toolkit/autogen/: __init__.py
wise_agent_toolkit/crewai/: __init__.py
wise_agent_toolkit/integrations/: __init__.py  base.py
wise_agent_toolkit/langchain/: __init__.py  tool.py  toolkit.py
wise_agent_toolkit/mcp/: server.py  tool.py
