[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wise-agent-toolkit"
version = "0.1.0"
description = "The Wise Agent Toolkit enables the integration of various AI frameworks and libraries with Wise APIs to create and manage transfers programmatically."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["wise", "transferwise", "ai", "agents", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies (always installed)
dependencies = [
    "wise-api-client>=0.2.4",
    "pydantic>=2.10",
]

[project.optional-dependencies]
# LangChain integration support
langchain = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "openai>=1.66.0",
]

# Future integration support can be added here
# crewai = ["crewai>=0.1.0"]
# autogen = ["autogen>=0.1.0"]

# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
]

# All integrations (convenience extra)
all = [
    "wise-agent-toolkit[langchain]",
]

[project.urls]
Homepage = "https://github.com/your-username/wise-agent-toolkit"
Repository = "https://github.com/your-username/wise-agent-toolkit"
Documentation = "https://github.com/your-username/wise-agent-toolkit"
"Bug Tracker" = "https://github.com/your-username/wise-agent-toolkit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["wise_agent_toolkit*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
